# skoleintra

./: .gitignore  AGENTS.md  CONTEXT.md  PRODUCT_PLAN.md  README.md  USAGE.md  alembic.ini  flake.nix  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
docs/adr/: 0001-weekplan-reminders-from-stored-data.md  0002-explicit-identity-merges.md
docs/agents/: domain.md  issue-tracker.md
skoleintra/: cli.py  operational_alerts.py  settings.py
skoleintra/blobs/: __init__.py  client.py  download.py
skoleintra/db/: __init__.py  identity.py  models.py  session.py  upsert.py
skoleintra/db/migrations/: env.py
skoleintra/db/migrations/versions/: 6020f3a7eaa5_initial_schema.py  7b2c4d1e9f0a_child_group_identity.py  8f9d2e7ac1b4_add_attachment_blob_storage.py  a3f9b21d7c4e_blob_storage.py  b4c9d2e7f1a3_operational_alert_incidents.py  b7c4d2ef8a11_merge_blob_storage_heads.py  d8a4c6f1b2e0_photo_album_item_type_split.py  ec1409e05cc7_create_initial_tables.py  f1c2d3e4a5b6_message_content_split.py
skoleintra/notifications/: __init__.py  dispatcher.py
skoleintra/photos/: __init__.py  service.py
skoleintra/scraper/: __init__.py  children.py  login.py  models.py  session.py
skoleintra/scraper/pages/: __init__.py  messages.py  photos.py  weekplans.py
skoleintra/web/: __init__.py
skoleintra/web/routes/: __init__.py
skoleintra/web/templates/: base.html  dashboard.html  item_detail.html  items.html  notification_settings.html
tests/: conftest.py  test_blob_storage.py  test_identity_reconciliation.py  test_messages_scraper.py  test_notifications.py  test_operational_alerts.py  test_photo_features.py  test_scrape_orchestration.py  test_scrape_response_cache.py  test_weekplans_scraper.py
