[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skoleintra"
version = "0.1.0"
description = "ForældreIntra scraper with PostgreSQL storage and web UI"
requires-python = ">=3.12"

dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "jinja2>=3.1",
  "pydantic-settings>=2.0",
  "psycopg[binary]>=3.1",   # psycopg3 - modern async-capable postgres driver
  "boto3>=1.34",            # S3-compatible blob storage (optional - blobs disabled if not configured)
]

[project.scripts]
skoleintra = "skoleintra.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["skoleintra"]