[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skoleintra"
version = "0.1.0"
description = "ForældreIntra scraper with PostgreSQL storage and web UI"
requires-python = ">=3.12"

dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "jinja2>=3.1",
  "pydantic-settings>=2.0",
  "psycopg[binary]>=3.1",   # psycopg3 - modern async-capable postgres driver
  "boto3>=1.34",            # S3-compatible blob storage (optional - blobs disabled if not configured)
]

[project.optional-dependencies]
dev = [
  "black>=25.0",
  "ipython>=9.0",
  "isort>=6.0",
  "pylint>=3.3",
  "pytest>=9.0",
]

[project.scripts]
skoleintra = "skoleintra.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 312
src_paths = ["skoleintra", "tests"]

[tool.pylint.main]
jobs = 0
py-version = "3.12"

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
  "broad-exception-caught",
  "duplicate-code",
  "import-outside-toplevel",
  "line-too-long",
  "not-callable",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-statements",
]

[tool.hatch.build.targets.wheel]
packages = ["skoleintra"]
